add warning to rendered file savedsearches.conf

--- a/advent-of-code/default/savedsearches.conf.j2
+++ b/advent-of-code/default/savedsearches.conf.j2
@@ -1,3 +1,4 @@
+# savedsearches.conf is generated from savedsearches.conf.j2, do not edit
 {% for f in savedsearches -%}
 {% import f as spl %}
 [{{ f }}]
